HtmlParser.java
// Generated from Html.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HtmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HTML_START=1, HTML_END=2, HEAD_START=3, HEAD_END=4, TITLE_START=5, TITLE_END=6, 
		BODY_START=7, BODY_END=8, P_START=9, P_END=10, DIV_START=11, DIV_END=12, 
		H1_START=13, H1_END=14, H2_START=15, H2_END=16, H3_START=17, H3_END=18, 
		H4_START=19, H4_END=20, CENTER_START=21, CENTER_END=22, SMALL_START=23, 
		SMALL_END=24, STRONG_START=25, STRONG_END=26, EM_START=27, EM_END=28, 
		U_START=29, U_END=30, B_START=31, B_END=32, I_START=33, I_END=34, SUB_START=35, 
		SUB_END=36, SUP_START=37, SUP_END=38, TT_START=39, TT_END=40, UL_START=41, 
		UL_END=42, OL_START=43, OL_END=44, LI_START=45, LI_END=46, A_START=47, 
		A_END=48, A_ATT=49, A_HREF=50, A_NAME=51, A_TITLE=52, DL_START=53, DL_END=54, 
		DT_START=55, DT_END=56, DD_START=57, DD_END=58, TABLE_START=59, TABLE_END=60, 
		TBODY_START=61, TBODY_END=62, TR_START=63, TR_END=64, TD_START=65, TD_END=66, 
		BR=67, FONT_START=68, FONT_END=69, IMG=70, IMG_ATT=71, IMG_SRC=72, IMG_HEIGHT=73, 
		IMG_WIDTH=74, TABLE_TAG=75, ATT_BORDER=76, SINGLE_QUOTE_INTEGER=77, DOUBLE_QUOTE_INTEGER=78, 
		ATT_HREF=79, ATT_TITLE=80, ATT_NAME=81, ATT_SIZE=82, ATT_SRC=83, ATT_WIDTH=84, 
		ATT_HEIGHT=85, HTML_COMMENT=86, HTML_CONDITIONAL_COMMENT=87, HTML_DOCTYPE_COMMENT=88, 
		OPEN_TAG=89, CLOSE_TAG=90, SLASH=91, WHITE_SPACE=92, HTML_TEXT=93, HTML_LATEX_CHAR=94, 
		GREEK_TEXT=95, TAG_CLOSE=96, TAG_OPEN=97, TAG_SLASH_CLOSE=98, TAG_SLASH=99;
	public static final int
		RULE_root = 0, RULE_html_content = 1, RULE_head_content = 2, RULE_title_content = 3, 
		RULE_body = 4, RULE_body_content = 5, RULE_general_content = 6, RULE_special_content = 7, 
		RULE_tag_open = 8, RULE_tag_close = 9, RULE_text = 10, RULE_table = 11, 
		RULE_tbody_content = 12, RULE_tr_content = 13, RULE_td_content = 14, RULE_a_link = 15, 
		RULE_a_content = 16, RULE_font = 17, RULE_font_content = 18, RULE_html_chardata = 19, 
		RULE_html_latex_char = 20, RULE_greek_text = 21, RULE_html_comment = 22, 
		RULE_html_start = 23, RULE_html_end = 24, RULE_head_start = 25, RULE_head_end = 26, 
		RULE_title_start = 27, RULE_title_end = 28, RULE_body_start = 29, RULE_body_end = 30, 
		RULE_p_start = 31, RULE_p_end = 32, RULE_div_start = 33, RULE_div_end = 34, 
		RULE_h1_start = 35, RULE_h1_end = 36, RULE_h2_start = 37, RULE_h2_end = 38, 
		RULE_h3_start = 39, RULE_h3_end = 40, RULE_h4_start = 41, RULE_h4_end = 42, 
		RULE_center_start = 43, RULE_center_end = 44, RULE_small_start = 45, RULE_small_end = 46, 
		RULE_strong_start = 47, RULE_strong_end = 48, RULE_em_start = 49, RULE_em_end = 50, 
		RULE_u_start = 51, RULE_u_end = 52, RULE_b_start = 53, RULE_b_end = 54, 
		RULE_i_start = 55, RULE_i_end = 56, RULE_sub_start = 57, RULE_sub_end = 58, 
		RULE_sup_start = 59, RULE_sup_end = 60, RULE_tt_start = 61, RULE_tt_end = 62, 
		RULE_ul_start = 63, RULE_ul_end = 64, RULE_ol_start = 65, RULE_ol_end = 66, 
		RULE_li_start = 67, RULE_li_end = 68, RULE_table_start = 69, RULE_table_end = 70, 
		RULE_tbody_start = 71, RULE_tbody_end = 72, RULE_tr_start = 73, RULE_tr_end = 74, 
		RULE_td_start = 75, RULE_td_end = 76, RULE_a_start = 77, RULE_a_end = 78, 
		RULE_dl_start = 79, RULE_dl_end = 80, RULE_dt_start = 81, RULE_dt_end = 82, 
		RULE_dd_start = 83, RULE_dd_end = 84, RULE_br = 85, RULE_font_start = 86, 
		RULE_font_end = 87, RULE_img = 88;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "html_content", "head_content", "title_content", "body", "body_content", 
			"general_content", "special_content", "tag_open", "tag_close", "text", 
			"table", "tbody_content", "tr_content", "td_content", "a_link", "a_content", 
			"font", "font_content", "html_chardata", "html_latex_char", "greek_text", 
			"html_comment", "html_start", "html_end", "head_start", "head_end", "title_start", 
			"title_end", "body_start", "body_end", "p_start", "p_end", "div_start", 
			"div_end", "h1_start", "h1_end", "h2_start", "h2_end", "h3_start", "h3_end", 
			"h4_start", "h4_end", "center_start", "center_end", "small_start", "small_end", 
			"strong_start", "strong_end", "em_start", "em_end", "u_start", "u_end", 
			"b_start", "b_end", "i_start", "i_end", "sub_start", "sub_end", "sup_start", 
			"sup_end", "tt_start", "tt_end", "ul_start", "ul_end", "ol_start", "ol_end", 
			"li_start", "li_end", "table_start", "table_end", "tbody_start", "tbody_end", 
			"tr_start", "tr_end", "td_start", "td_end", "a_start", "a_end", "dl_start", 
			"dl_end", "dt_start", "dt_end", "dd_start", "dd_end", "br", "font_start", 
			"font_end", "img"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'/>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HTML_START", "HTML_END", "HEAD_START", "HEAD_END", "TITLE_START", 
			"TITLE_END", "BODY_START", "BODY_END", "P_START", "P_END", "DIV_START", 
			"DIV_END", "H1_START", "H1_END", "H2_START", "H2_END", "H3_START", "H3_END", 
			"H4_START", "H4_END", "CENTER_START", "CENTER_END", "SMALL_START", "SMALL_END", 
			"STRONG_START", "STRONG_END", "EM_START", "EM_END", "U_START", "U_END", 
			"B_START", "B_END", "I_START", "I_END", "SUB_START", "SUB_END", "SUP_START", 
			"SUP_END", "TT_START", "TT_END", "UL_START", "UL_END", "OL_START", "OL_END", 
			"LI_START", "LI_END", "A_START", "A_END", "A_ATT", "A_HREF", "A_NAME", 
			"A_TITLE", "DL_START", "DL_END", "DT_START", "DT_END", "DD_START", "DD_END", 
			"TABLE_START", "TABLE_END", "TBODY_START", "TBODY_END", "TR_START", "TR_END", 
			"TD_START", "TD_END", "BR", "FONT_START", "FONT_END", "IMG", "IMG_ATT", 
			"IMG_SRC", "IMG_HEIGHT", "IMG_WIDTH", "TABLE_TAG", "ATT_BORDER", "SINGLE_QUOTE_INTEGER", 
			"DOUBLE_QUOTE_INTEGER", "ATT_HREF", "ATT_TITLE", "ATT_NAME", "ATT_SIZE", 
			"ATT_SRC", "ATT_WIDTH", "ATT_HEIGHT", "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", 
			"HTML_DOCTYPE_COMMENT", "OPEN_TAG", "CLOSE_TAG", "SLASH", "WHITE_SPACE", 
			"HTML_TEXT", "HTML_LATEX_CHAR", "GREEK_TEXT", "TAG_CLOSE", "TAG_OPEN", 
			"TAG_SLASH_CLOSE", "TAG_SLASH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Html.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HtmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public Html_startContext html_start() {
			return getRuleContext(Html_startContext.class,0);
		}
		public Html_contentContext html_content() {
			return getRuleContext(Html_contentContext.class,0);
		}
		public Html_endContext html_end() {
			return getRuleContext(Html_endContext.class,0);
		}
		public TerminalNode EOF() { return getToken(HtmlParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			html_start();
			setState(179);
			html_content();
			setState(180);
			html_end();
			setState(181);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Html_contentContext extends ParserRuleContext {
		public Head_startContext head_start() {
			return getRuleContext(Head_startContext.class,0);
		}
		public Head_contentContext head_content() {
			return getRuleContext(Head_contentContext.class,0);
		}
		public Head_endContext head_end() {
			return getRuleContext(Head_endContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public Html_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).enterHtml_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).exitHtml_content(this);
		}
	}

	public final Html_contentContext html_content() throws RecognitionException {
		Html_contentContext _localctx = new Html_contentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_html_content);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			head_start();
			setState(184);
			head_content();
			setState(185);
			head_end();
			setState(186);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Head_contentContext extends ParserRuleContext {
		public Title_startContext title_start() {
			return getRuleContext(Title_startContext.class,0);
		}
		public Title_contentContext title_content() {
			return getRuleContext(Title_contentContext.class,0);
		}
		public Title_endContext title_end() {
			return getRuleContext(Title_endContext.class,0);
		}
		public Head_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).enterHead_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).exitHead_content(this);
		}
	}

	public final Head_contentContext head_content() throws RecognitionException {
		Head_contentContext _localctx = new Head_contentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_head_content);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			title_start();
			setState(189);
			title_content();
			setState(190);
			title_end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Title_contentContext extends ParserRuleContext {
		public TerminalNode HTML_TEXT() { return getToken(HtmlParser.HTML_TEXT, 0); }
		public TerminalNode WHITE_SPACE() { return getToken(HtmlParser.WHITE_SPACE, 0); }
		public Title_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).enterTitle_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).exitTitle_content(this);
		}
	}

	public final Title_contentContext title_content() throws RecognitionException {
		Title_contentContext _localctx = new Title_contentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_title_content);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_la = _input.LA(1);
			if ( !(_la==WHITE_SPACE || _la==HTML_TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public Body_startContext body_start() {
			return getRuleContext(Body_startContext.class,0);
		}
		public Body_contentContext body_content() {
			return getRuleContext(Body_contentContext.class,0);
		}
		public Body_endContext body_end() {
			return getRuleContext(Body_endContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			body_start();
			setState(195);
			body_content();
			setState(196);
			body_end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Body_contentContext extends ParserRuleContext {
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public List<General_contentContext> general_content() {
			return getRuleContexts(General_contentContext.class);
		}
		public General_contentContext general_content(int i) {
			return getRuleContext(General_contentContext.class,i);
		}
		public Body_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).enterBody_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).exitBody_content(this);
		}
	}

	public final Body_contentContext body_content() throws RecognitionException {
		Body_contentContext _localctx = new Body_contentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_body_content);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(198);
				text();
				}
				break;
			}
			setState(202); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(201);
					general_content();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(204); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(207);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHITE_SPACE || _la==HTML_TEXT) {
				{
				setState(206);
				text();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class General_contentContext extends ParserRuleContext {
		public Tag_openContext tag_open() {
			return getRuleContext(Tag_openContext.class,0);
		}
		public Tag_closeContext tag_close() {
			return getRuleContext(Tag_closeContext.class,0);
		}
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public List<General_contentContext> general_content() {
			return getRuleContexts(General_contentContext.class);
		}
		public General_contentContext general_content(int i) {
			return getRuleContext(General_contentContext.class,i);
		}
		public Special_contentContext special_content() {
			return getRuleContext(Special_contentContext.class,0);
		}
		public General_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_general_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).enterGeneral_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).exitGeneral_content(this);
		}
	}

	public final General_contentContext general_content() throws RecognitionException {
		General_contentContext _localctx = new General_contentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_general_content);
		int _la;
		try {
			int _alt;
			setState(254);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(212);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE || _la==HTML_TEXT) {
					{
					{
					setState(209);
					text();
					}
					}
					setState(214);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(215);
				tag_open();
				setState(219);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(216);
						text();
						}
						} 
					}
					setState(221);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(225);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(222);
						general_content();
						}
						} 
					}
					setState(227);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(231);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE || _la==HTML_TEXT) {
					{
					{
					setState(228);
					text();
					}
					}
					setState(233);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(234);
				tag_close();
				setState(238);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(235);
						text();
						}
						} 
					}
					setState(240);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(244);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE || _la==HTML_TEXT) {
					{
					{
					setState(241);
					text();
					}
					}
					setState(246);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(247);
				special_content();
				setState(251);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(248);
						text();
						}
						} 
					}
					setState(253);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Special_contentContext extends ParserRuleContext {
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public A_linkContext a_link() {
			return getRuleContext(A_linkContext.class,0);
		}
		public BrContext br() {
			return getRuleContext(BrContext.class,0);
		}
		public FontContext font() {
			return getRuleContext(FontContext.class,0);
		}
		public ImgContext img() {
			return getRuleContext(ImgContext.class,0);
		}
		public Html_latex_charContext html_latex_char() {
			return getRuleContext(Html_latex_charContext.class,0);
		}
		public Greek_textContext greek_text() {
			return getRuleContext(Greek_textContext.class,0);
		}
		public Special_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_special_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).enterSpecial_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).exitSpecial_content(this);
		}
	}

	public final Special_contentContext special_content() throws RecognitionException {
		Special_contentContext _localctx = new Special_contentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_special_content);
		try {
			setState(263);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TABLE_START:
				enterOuterAlt(_localctx, 1);
				{
				setState(256);
				table();
				}
				break;
			case A_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(257);
				a_link();
				}
				break;
			case BR:
				enterOuterAlt(_localctx, 3);
				{
				setState(258);
				br();
				}
				break;
			case FONT_START:
				enterOuterAlt(_localctx, 4);
				{
				setState(259);
				font();
				}
				break;
			case IMG:
				enterOuterAlt(_localctx, 5);
				{
				setState(260);
				img();
				}
				break;
			case HTML_LATEX_CHAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(261);
				html_latex_char();
				}
				break;
			case GREEK_TEXT:
				enterOuterAlt(_localctx, 7);
				{
				setState(262);
				greek_text();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tag_openContext extends ParserRuleContext {
		public P_startContext p_start() {
			return getRuleContext(P_startContext.class,0);
		}
		public Div_startContext div_start() {
			return getRuleContext(Div_startContext.class,0);
		}
		public H1_startContext h1_start() {
			return getRuleContext(H1_startContext.class,0);
		}
		public H2_startContext h2_start() {
			return getRuleContext(H2_startContext.class,0);
		}
		public H3_startContext h3_start() {
			return getRuleContext(H3_startContext.class,0);
		}
		public H4_startContext h4_start() {
			return getRuleContext(H4_startContext.class,0);
		}
		public Center_startContext center_start() {
			return getRuleContext(Center_startContext.class,0);
		}
		public Small_startContext small_start() {
			return getRuleContext(Small_startContext.class,0);
		}
		public Strong_startContext strong_start() {
			return getRuleContext(Strong_startContext.class,0);
		}
		public Em_startContext em_start() {
			return getRuleContext(Em_startContext.class,0);
		}
		public U_startContext u_start() {
			return getRuleContext(U_startContext.class,0);
		}
		public B_startContext b_start() {
			return getRuleContext(B_startContext.class,0);
		}
		public I_startContext i_start() {
			return getRuleContext(I_startContext.class,0);
		}
		public Sub_startContext sub_start() {
			return getRuleContext(Sub_startContext.class,0);
		}
		public Sup_startContext sup_start() {
			return getRuleContext(Sup_startContext.class,0);
		}
		public Tt_startContext tt_start() {
			return getRuleContext(Tt_startContext.class,0);
		}
		public Ul_startContext ul_start() {
			return getRuleContext(Ul_startContext.class,0);
		}
		public Ol_startContext ol_start() {
			return getRuleContext(Ol_startContext.class,0);
		}
		public Li_startContext li_start() {
			return getRuleContext(Li_startContext.class,0);
		}
		public Dl_startContext dl_start() {
			return getRuleContext(Dl_startContext.class,0);
		}
		public Dt_startContext dt_start() {
			return getRuleContext(Dt_startContext.class,0);
		}
		public Dd_startContext dd_start() {
			return getRuleContext(Dd_startContext.class,0);
		}
		public Tag_openContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag_open; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).enterTag_open(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HtmlListener ) ((HtmlListener)listener).exitTag_open(this);
		}
	}
